# mine.cu

./: .gitignore  README.md  pyproject.toml  setup.py
docs/: LLM.md  architecture.md  benchmarks.md  environment.md
examples/: train_wood.py  visualize.py
minecu/: __init__.py  config.py
scripts/: benchmark_kernels.py  benchmark_new_kernels.py  plot_throughput.py  run_throughput_benchmark.py  setup.sh
src/: bindings.cpp  bindings_optimized.cpp  kernels.cu  kernels_optimized.cu
