[build-system]
requires = ["setuptools", "torch>=2.0", "ninja"]
build-backend = "setuptools.build_meta"

[project]
name = "minecu"
version = "0.1.0"
description = "High-performance batched voxel RL environment with custom CUDA kernels"
authors = [{name = "Infatoshi"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy",
]

[project.optional-dependencies]
dev = ["matplotlib", "imageio", "pillow"]

[project.urls]
Repository = "https://github.com/Infatoshi/mine.cu"
